--- a/ACL.Recom.Client/ACL.Recom.Cliente.nuspec
+++ b/ACL.Recom.Client/ACL.Recom.Cliente.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata>
     <id>ACL.Recom.Client</id>
-    <version>0.1.0</version>
+    <version>0.1.1</version>
     <authors>ACL TI</authors>
     <owners>ACL TI</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -18,4 +18,8 @@
       </group>
     </dependencies>
   </metadata>
+  <files>
+    <file src="bin\Release\net452\*.*" target="lib\net452" />
+    <file src="bin\Release\netstandard2.0\*.*" target="lib\netstandard2.0" />
+  </files>
 </package>
