--- a/ACL.Recom.Client/ACL.Recom.Client.csproj
+++ b/ACL.Recom.Client/ACL.Recom.Client.csproj
@@ -8,12 +8,13 @@
     <Authors>ACL TI</Authors>
     <Description>Client para consumo das APIs do Recom</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Version>0.1.3</Version>
+    <Version>0.1.4</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="3.8.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.4" />
   </ItemGroup>
 
 </Project>
