--- a/ACL.Recom.Client/ACL.Recom.Client.csproj
+++ b/ACL.Recom.Client/ACL.Recom.Client.csproj
@@ -8,7 +8,8 @@
     <Authors>ACL TI</Authors>
     <Description>Client para consumo das APIs do Recom</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Version>0.1.4</Version>
+    <Version>0.1.5</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
